--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .gz filter=lfs diff=lfs merge=lfs -text
 file_868.3M_1024k_2.cu8.gz filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
